# OtherOldProj

./: README.md
AudioDev/: AudioDev.sln
AudioDev/AudioDev/: AudioCtrl.cpp  AudioDev.aps  AudioDev.cpp  AudioDev.h  AudioDev.rc  AudioDev.vcproj  AudioDevDlg.cpp  AudioDevDlg.h  ReadMe.txt  resource.h  stdafx.cpp
AudioSwitchEx/: AudioSwitch.sln
AudioSwitchEx/AudioSwitch/: Audio.cpp  AudioSwitch.aps  AudioSwitch.cpp  (+20 more)
Evr/: Evr.sln  Evr.sln.old  Evr.suo.old
FilterAX/: FilterAX.sln  mpgehdr.doc  stdafx_common.h  stdafx_common_afx2.h
FilterWindow/: FilterWindow.sln
GlpWmaPlayer/: GlpWmaPlayer.sln
IconExample/: IconExample.sln
JniDll/: JniDll.sln
MyMulti/: MyMulti.sln
RecoderThread/: Recoder2.sln
STASource 2.0/: STASource.sln  STASource.vcproj  stasource.def  stdafx.cpp  stdafx.h
SeeRefreshrate/: SeeRefreshrate.sln
TestSound/: TestSound.sln
XGSQLite/: XGSQLite.sln  readme.txt
xingguang room server/: RoomServer.PO  RoomServer.PR  星光简化版2.0需求.docx  显示规则列表.xlsx
xingguang room server/src/roomserver/: CMakeLists.txt  Factorydatedecoder.cpp  HallSvrClient.cpp  HallSvrClient.h  MonitorSvrClient.cpp  MonitorSvrClient.h  StreamFactory.cpp  StreamFactory.h  clientdatadecoder.cpp  dbagentdatadecoder.cpp  halldatadecoder.cpp  main.cpp  monitordatadecoder.cpp  netproxy.cpp  netproxy.h  rightconfig.cpp  rightconfig.h  rightconfigEx.cpp  rightconfigEx.h  roomclient.cpp  roomclient.h  roomlisten.cpp  roomlisten.h  roomserver.ncb  roomserver.sln  roomserver.vcproj  roomserver7.1.vcproj  roomtimeout.cpp  roomtimeout.h  roomtype.h  serverconf.cpp  serverconf.h
(+377 files in other folders)
