PROJECT(ROOMSERVER)

#AUX_SOURCE_DIRECTORY(../network SRC_LIST)
AUX_SOURCE_DIRECTORY(./ SRC_LIST)
SET(EXECUTABLE_OUTPUT_PATH ../../bin)

ADD_DEFINITIONS(-g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO -DAC_HAS_WARNING -DAC_HAS_DEBUG -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL -DLINUX_DAEMON)
# -DLINUX_DAEMON)
# -DAC_HAS_DEBUG

INCLUDE_DIRECTORIES(./ ../include /home/soft/zlib-1.2.3)
LINK_DIRECTORIES( ../lib /home/soft/zlib-1.2.3)
ADD_EXECUTABLE(roomserver ${SRC_LIST})

TARGET_LINK_LIBRARIES(roomserver pthread netbase netutil libz.a)
